# IpHire

./: .gitignore  AUTHORS.md  LICENSE  README.md  capacitor.config.ts  next.config.ts  package-lock.json  package.json
android/app/: build.gradle
android/app/src/main/java/ai/iphire/app/: MainActivity.java
android/app/src/main/res/values/: strings.xml
extension/: background.js  content.js  manifest.json  popup.html  popup.js
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
scripts/: setup-db.js
src/: middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/auth/register/: route.ts
src/app/api/autopilot/apply/: route.ts
src/app/api/autopilot/search/: route.ts
src/app/api/chat/: route.ts
src/app/api/db/sync/: route.ts
src/app/api/jobs/: route.ts
src/app/api/parse-file/: route.ts
src/app/dashboard/: page.tsx
src/app/login/: page.tsx
src/app/register/: page.tsx
src/components/chat/: ChatWorkspace.tsx  GlobalChat.tsx
src/components/dashboard/: AgentWorkflows.tsx  AppTracker.tsx  AutoFillStudio.tsx  AutoPilot.tsx  CareerAnalytics.tsx  CoverLetterStudio.tsx  InterviewCoach.tsx  InterviewScheduler.tsx  JobAnalyzer.tsx  JobDiscovery.tsx  PortfolioBuilder.tsx  ResumeStudio.tsx  SettingsBYOK.tsx  SkillGapAnalyzer.tsx  UserProfileStudio.tsx
src/components/ui/: Logo.tsx  ThemeToggle.tsx
src/lib/: auth.ts  db.ts  fileParser.ts  llm.ts  tidb.ts  useAutoPilot.ts
