[package]
name = "iphire-app"
version = "1.0.0"
description = "IpHire AI - Career Operating System"
authors = ["IpHire Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
